WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31380
DOM Wrappers for some nodes may not be marked.
https://bugs.webkit.org/show_bug.cgi?id=31380
Summary
DOM Wrappers for some nodes may not be marked.
Gavin Barraclough
Reported
2009-11-11 15:31:03 PST
Some markChildren methods are calling getCachedDOMNodeWrapper, which will find the wrapper for the current world only. This means that wrappers may be GC'ed prematurely, and properties lost. Move to a model more like markDOMObjectWrapper, mark wrappers for all worlds.
Attachments
The patch
(7.16 KB, patch)
2009-11-11 15:52 PST
,
Gavin Barraclough
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2009-11-11 15:52:34 PST
Created
attachment 43014
[details]
The patch
Gavin Barraclough
Comment 2
2009-11-11 17:00:39 PST
Sending WebCore/ChangeLog Sending WebCore/bindings/js/JSAttrCustom.cpp Sending WebCore/bindings/js/JSDOMBinding.cpp Sending WebCore/bindings/js/JSDOMBinding.h Sending WebCore/bindings/js/JSNamedNodeMapCustom.cpp Sending WebCore/bindings/js/JSNodeCustom.cpp Sending WebCore/bindings/js/JSSVGElementInstanceCustom.cpp Sending WebCore/bindings/js/JSStyleSheetCustom.cpp Transmitting file data ........ Committed revision 50850.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug