WebCore/bindings/js/JSNodeCustom.cpp
@@ -161,11 +161,8 @@ void JSNode::markChildren(MarkStack& markStack)
 
     // Mark the whole tree subtree.
     root->setInSubtreeMark(true);
-    for (Node* nodeToMark = root; nodeToMark; nodeToMark = nodeToMark->traverseNextNode()) {
-        JSNode* wrapper = getCachedDOMNodeWrapper(m_impl->document(), nodeToMark);
-        if (wrapper)
-            markStack.append(wrapper);
-    }
+    for (Node* nodeToMark = root; nodeToMark; nodeToMark = nodeToMark->traverseNextNode())
+        markDOMNodeWrapper(markStack, m_impl->document(), nodeToMark);
     root->setInSubtreeMark(false);
 }
 
